@@ -83,7 +83,7 @@ public class PawnAnimationMapping {
     public String toString() {
         return "PawnAnimationMapping{" +
                 "pawn=" + pawn +
-                ", points=" + points.getFirst() + " - " + points.getLast() +
+                ", points=" + points.get(0) + " - " + points.get(points.size()-1) +
                 '}';
     }
 }
